--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,51 @@
 * {
+    margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
+
+container {
+    display: grid;
+    grid-template-areas:
+        "header header"
+        "nav nav"
+        "main aside"
+        "footer footer";
+
+}
+
 header {
+    grid-area: header;
     background-color: #FFC107;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
-    
+
+
 }
 
-img.logotop {}
 
-
-nav {
-
-    background: #FFA000;
-}
-
-section {}
-
-
-aside {
-    
-    
-
-}
 
 ul {
     list-style: none;
     margin: 0 auto;
 }
 
-nav ul {
-    display: flex;
-    justify-content: center;
-
+nav {
+    grid-area: nav;
+    background: #FFA000;
 }
 
-nav ul li {
-    padding: 5px;
+a:link,
+a:visited,
+a:hover,
+a:active {
+    color: #FDFDFD;
+    text-decoration: none;
+}
+
+nav ul {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
@@ -45,22 +53,57 @@ nav ul li {
     line-height: 24px;
     text-transform: lowercase;
     color: #FDFDFD;
+
+
+}
+
+nav ul li {
+    padding-left: 58px;
+
 }
 
 
-.receitarisoto {}
 
+h1 {
+    margin-top: 107px;
+    margin-bottom: 28px;
+}
+
+main {
+    grid-area: main;
+    margin-left: 128px;
+
+
+}
+
+main section span {
+    border: 1px solid #176902;
+    border-radius: 47px;
+    margin-top: 25px;   
+}
+
+h2 {
+    margin-top: 178px;
+}
+
+.ingredientes {
+}
 .mododepreparo {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 24px;
-    text-transform: lowercase;
-
+    width: 500px;
 }
 
-.relacionadas {}
+aside {
+
+    grid-area: aside;
+    text-align: center;
+    margin-left: 192px;
+}
+
+aside img {
+    width: 345px;
+    height: 342px;
+    border: solid black;
+}
 
 footer {
     margin: 0;
@@ -69,5 +112,6 @@ footer {
     top: 0px;
     padding: 0;
     background: #FFC107;
+    grid-area: footer;
 
 }
